--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
         <link rel="stylesheet" href="css/global.css" />
         <!--this means if screen max width less than 900px, use this CSS-->
         <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 900px)" />
+
+        <!--javascript-->
+        <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="js/global.js"></script>
     </head>
     <body>
+        <div class="nav_menu" onclick="menu_expander(this)">
+            <div class="m1"></div>
+            <div class="m2"></div>
+            <div class="m3"></div>
+        </div>
+
         <!--navigation bar-->
-        <div class="nav_bar">
+        <div class="nav_bar clear_fix">
+            <!--main page link-->
+            <a href="index.html" class="stick_left"><img src="images/Home_Page.png" alt="Home Page" /></a>
+            <!--navigation bar for menu-->
             <ul class="link">
-                <li class="stick_left"><a href="index.html"><img src="images/Home_Page.png" alt="Home Page" /></a></li>
                 <li><a href="#">aaaaaa</a></li>
                 <li><a href="#">bbbbbbbbb</a></li>
                 <li><a href="#">cccccc</a></li>
