register page elements done

--- a/others/yinghua/login.html
+++ b/others/yinghua/login.html
@@ -2,9 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Log In</title>
 </head>
 <body>
 
+<!-- Expected parameter to be developed in future: Action, Method -->
+<form id="loginForm">
+    <div>
+        <p>
+            <label>
+                User name: <input type="text" placeholder="username" name="username" required>
+            </label>
+        </p>
+
+        <p>
+            <label>
+                <!-- To be implement validation and title for UX and assignment marks -->
+                Password: <input type="password" placeholder="password" name=" password" required>
+            </label>
+        </p>
+
+        <button type="submit" value="Login">Login</button>
+    </div>
+</form>
+
+</div>
 </body>
 </html>
