-browse function front-end code template added -create and update event template added

--- a/others/cgy/browse.html
+++ b/others/cgy/browse.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Title</title>
+        <title>Browse Event</title>
         <link rel="stylesheet" href="browse.css">
         <script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
         <link rel="stylesheet" href="responsive.css" media="screen and (max-width: 900px)" />
