-making the browse button works like it was, navigate to browse.html -add a button to navigate to apply ticket screen
-add new working post function for linking register.html to db, will add another for login.html in the next commit

--- a/others/cgy/browse.html
+++ b/others/cgy/browse.html
@@ -14,7 +14,7 @@
                 <div class="flex_1">Name</div>
                 <div class="flex_1">Date & Time</div>
                 <!--<button>Apply Ticket</button>-->
-                <form action="#">
+                <form action="apply.html">
                     <input class="apply_tix" type="submit" value="Apply Ticket">
                 </form>
             </div>
@@ -22,7 +22,7 @@
                 <div class="cover_p"><img src="testpic2.jpg"/> </div>
                 <div class="flex_1">Name</div>
                 <div class="flex_1">Date & Time</div>
-                <form action="#">
+                <form action="apply.html">
                     <input class="apply_tix" type="submit" value="Apply Ticket">
                 </form>
             </div>
@@ -30,7 +30,7 @@
                 <div class="cover_p"><img src="testpic3.jpg"/> </div>
                 <div class="flex_1">Name</div>
                 <div class="flex_1">Date & Time</div>
-                <form action="#">
+                <form action="apply.html">
                     <input class="apply_tix" type="submit" value="Apply Ticket">
                 </form>
             </div>
