--- a/others/cgy/apply.html
+++ b/others/cgy/apply.html
@@ -5,6 +5,8 @@
         <title>Apply Ticket</title>
     </head>
     <body>
-
+        <form action="browse.html">
+            <input type="submit" value="browse">
+        </form>
     </body>
 </html>
