--- a/others/yinghua/test.html
+++ b/others/yinghua/test.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Blank</title>
 </head>
 <body>
-$END$
+<p>Testing page for login successful.</p>
 </body>
 </html>
