--- a/others/yinghua/login.html
+++ b/others/yinghua/login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Log In</title>
+    <link rel="stylesheet" type="text/css" href="yh_style.css">
 </head>
 <body>
 
