- login verify is now fully working - try GET method ltr - sql code for db minor changes: password for both user and admin type change from varchar(50) to text

--- a/others/linkdb/try (yinghua prototype)/login.html
+++ b/others/linkdb/try (yinghua prototype)/login.html
@@ -9,7 +9,7 @@
 <body>
 
 <!-- Expected parameter to be developed in future: Action, Method -->
-<form id="loginForm">
+<form id="loginForm" name="login" action="php/user_login.php" method="post">
     <div>
         <p>
             <label>
@@ -20,11 +20,12 @@
         <p>
             <label>
                 <!-- To be implement validation and title for UX and assignment marks -->
-                Password: <input type="password" placeholder="password" name=" password" required>
+                Password: <input type="password" placeholder="password" name="pass" required>
             </label>
         </p>
 
-        <button type="submit" value="Login">Login</button>
+        <!--<button type="submit" value="Login">Login</button>-->
+        <input name="login" type="submit">
     </div>
 </form>
 </body>
