-folder name changed

--- a/others/linkdb/try (diplay db data)/browse.html
+++ b/others/linkdb/try (diplay db data)/browse.html
@@ -10,7 +10,7 @@
     <body>
         <div class="browse_container">
             <div class="browse_box">
-                <div class="cover_p"><img src="testpic1.jpg"/> </div>
+                <div class="cover_p"><img src="resource/testpic1.jpg"/> </div>
                 <div class="flex_1">Name</div>
                 <div class="flex_1">Date & Time</div>
                 <!--<button>Apply Ticket</button>-->
@@ -19,7 +19,7 @@
                 </form>
             </div>
             <div class="browse_box">
-                <div class="cover_p"><img src="testpic2.jpg"/> </div>
+                <div class="cover_p"><img src="resource/testpic2.jpg"/> </div>
                 <div class="flex_1">Name</div>
                 <div class="flex_1">Date & Time</div>
                 <form action="apply.html">
@@ -27,7 +27,7 @@
                 </form>
             </div>
             <div class="browse_box">
-                <div class="cover_p"><img src="testpic3.jpg"/> </div>
+                <div class="cover_p"><img src="resource/testpic3.jpg"/> </div>
                 <div class="flex_1">Name</div>
                 <div class="flex_1">Date & Time</div>
                 <form action="apply.html">
