-added fully working event box (PDO used) -added mysqli and PDO version of getEventInfo and show_event

--- a/others/linkdb/try (diplay db data)/browse.html
+++ b/others/linkdb/try (diplay db data)/browse.html
@@ -8,32 +8,39 @@
         <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 900px)" />
     </head>
     <body>
-        <div class="browse_container">
-            <div class="browse_box">
-                <div class="cover_p"><img src="resource/testpic1.jpg"/> </div>
-                <div class="flex_1">Name</div>
-                <div class="flex_1">Date & Time</div>
-                <!--<button>Apply Ticket</button>-->
-                <form action="apply.html">
-                    <input class="apply_tix" type="submit" value="Apply Ticket">
-                </form>
-            </div>
-            <div class="browse_box">
-                <div class="cover_p"><img src="resource/testpic2.jpg"/> </div>
-                <div class="flex_1">Name</div>
-                <div class="flex_1">Date & Time</div>
-                <form action="apply.html">
-                    <input class="apply_tix" type="submit" value="Apply Ticket">
-                </form>
-            </div>
-            <div class="browse_box">
-                <div class="cover_p"><img src="resource/testpic3.jpg"/> </div>
-                <div class="flex_1">Name</div>
-                <div class="flex_1">Date & Time</div>
-                <form action="apply.html">
-                    <input class="apply_tix" type="submit" value="Apply Ticket">
-                </form>
-            </div>
+        <div class="browse_container">\
+                <script language="javascript" type="text/javascript" src="js/getEventInfo.js"></script>\
         </div>
+
+        <!--<div class="browse_container">-->
+            <!--<div class="browse_box">-->
+                <!--<div class="cover_p"><img src="resource/testpic1.jpg"/> </div>-->
+                <!--<div class="flex_1">-->
+                    <!--<div id="output">this element will be accessed by jquery and this text replaced</div>-->
+                    <!--<script language="javascript" type="text/javascript" src="js/getEventInfo.js"></script>-->
+                <!--</div>-->
+                <!--<div class="flex_1">Date & Time</div>-->
+                <!--&lt;!&ndash;<button>Apply Ticket</button>&ndash;&gt;-->
+                <!--<form action="apply.html">-->
+                    <!--<input class="apply_tix" type="submit" value="Apply Ticket">-->
+                <!--</form>-->
+            <!--</div>-->
+            <!--<div class="browse_box">-->
+                <!--<div class="cover_p"><img src="resource/testpic2.jpg"/> </div>-->
+                <!--<div class="flex_1">Name</div>-->
+                <!--<div class="flex_1">Date & Time</div>-->
+                <!--<form action="apply.html">-->
+                    <!--<input class="apply_tix" type="submit" value="Apply Ticket">-->
+                <!--</form>-->
+            <!--</div>-->
+            <!--<div class="browse_box">-->
+                <!--<div class="cover_p"><img src="resource/testpic3.jpg"/> </div>-->
+                <!--<div class="flex_1">Name</div>-->
+                <!--<div class="flex_1">Date & Time</div>-->
+                <!--<form action="apply.html">-->
+                    <!--<input class="apply_tix" type="submit" value="Apply Ticket">-->
+                <!--</form>-->
+            <!--</div>-->
+        <!--</div>-->
     </body>
 </html>
