-create event completed (without CSS part)

--- a/others/cgy/apply.html
+++ b/others/cgy/apply.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Apply Ticket</title>
+        <title>Apply for Ticket?</title>
         <script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
-        <script type="text/javascript" src="js/createTicket.js"></script>
+        <!--<script type="text/javascript" src="js/createTicket.js"></script>-->
     </head>
     <body>
         <div>Are you sure you want to apply ticket for this event?
