--- a/others/cgy/browse.html
+++ b/others/cgy/browse.html
@@ -8,18 +8,18 @@
         <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 900px)" />
     </head>
     <body>
-        <div class="browse_container">\
+        <div class="browse_container">
                 <script language="javascript" type="text/javascript" src="js/getEventInfo.js"></script>\
         </div>
 
         <!--<div class="browse_container">-->
             <!--<div class="browse_box">-->
                 <!--<div class="cover_p"><img src="resource/testpic1.jpg"/> </div>-->
-                <!--<div class="flex_1">-->
+                <!--<div class="flex_2">-->
                     <!--<div id="output">this element will be accessed by jquery and this text replaced</div>-->
                     <!--<script language="javascript" type="text/javascript" src="js/getEventInfo.js"></script>-->
                 <!--</div>-->
-                <!--<div class="flex_1">Date & Time</div>-->
+                <!--<div class="flex_2">Date & Time</div>-->
                 <!--&lt;!&ndash;<button>Apply Ticket</button>&ndash;&gt;-->
                 <!--<form action="apply.html">-->
                     <!--<input class="apply_tix" type="submit" value="Apply Ticket">-->
@@ -27,16 +27,16 @@
             <!--</div>-->
             <!--<div class="browse_box">-->
                 <!--<div class="cover_p"><img src="resource/testpic2.jpg"/> </div>-->
-                <!--<div class="flex_1">Name</div>-->
-                <!--<div class="flex_1">Date & Time</div>-->
+                <!--<div class="flex_2">Name</div>-->
+                <!--<div class="flex_2">Date & Time</div>-->
                 <!--<form action="apply.html">-->
                     <!--<input class="apply_tix" type="submit" value="Apply Ticket">-->
                 <!--</form>-->
             <!--</div>-->
             <!--<div class="browse_box">-->
                 <!--<div class="cover_p"><img src="resource/testpic3.jpg"/> </div>-->
-                <!--<div class="flex_1">Name</div>-->
-                <!--<div class="flex_1">Date & Time</div>-->
+                <!--<div class="flex_2">Name</div>-->
+                <!--<div class="flex_2">Date & Time</div>-->
                 <!--<form action="apply.html">-->
                     <!--<input class="apply_tix" type="submit" value="Apply Ticket">-->
                 <!--</form>-->
