-update event completed (without CSS part)

--- a/others/jiale/createevent.html
+++ b/others/jiale/createevent.html
@@ -17,7 +17,7 @@
 
 		<br>
 
-		<form id="eventForm" name="CreateEvent" action="php/createEvent.php" method="post" >
+		<form id="eventForm" name="CreateEvent" action="php/create_event.php" method="post" >
 			<div>
 			<label> EVENT NAME:*
 				<input type="text" placeholder="MMU Event"
