--- a/others/cgy/browse.html
+++ b/others/cgy/browse.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="browse_container">
-                <script language="javascript" type="text/javascript" src="js/getEventInfo.js"></script>\
+                <script language="javascript" type="text/javascript" src="js/getEventInfo.js"></script>
         </div>
 
         <!--<div class="browse_container">-->
