--- a/others/cgy/view_ticket.html
+++ b/others/cgy/view_ticket.html
@@ -7,7 +7,7 @@
     </head>
     <body>
     <div class="browse_container">
-        <script language="javascript" type="text/javascript" src="js/getEventInfo.js"></script>\
+        <script language="javascript" type="text/javascript" src="js/getEventInfo.js"></script>
     </div>
     </body>
 </html>
