--- a/others/jiale/updateevent.html
+++ b/others/jiale/updateevent.html
@@ -3,82 +3,81 @@
 <html>
 
 	<head>
-
 		<meta charset="utf-8">
 		<title>Welcome to update event function.</title>
-
+		<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="js/connect.js"></script>
 	</head>
 
 	<body>
-		<h1>Update Event</h1>
-		<h2>1. EVENT DETAILS</h2>
+	<h2 id="response"></h2>
+	<h1>Update An Event</h1>
+	<h2>1. EVENT DETAILS</h2>
 
-		<br>
+	<br>
 
-		<form method="post" action="#" >
-			<label> EVENT TITLE*
+	<form id="eventForm" name="CreateEvent" action="php/update_event.php" method="post" >
+		<div>
+			<label> CHOOSE EVENT:*
+				<select name="eventID" class="eNameList">
+					<script language="javascript" type="text/javascript" src="js/loadEventID.js"></script>
+				</select>
+				(Choose the event you want to update.)
+
+			</label>
+
+			<br>
+			<br>
+
+			<label> EVENT NAME:*
 				<input type="text" placeholder="MMU Event"
-					   name="event title"/>
-					   (Enter a short distinct name.)
+					   name="eventName"/>
+				(Enter a short distinct name.)
 
 			</label>
 
 			<br>
 			<br>
 
-			<label> LOCATION*
+			<label> LOCATION:*
 				<input type="text" placeholder="MMU"
-					   name="Locate"/>
-					   (Enter a short distinct of address.)
+					   name="locate"/>
+				(Enter a short distinct of address.)
 
 			</label>
 
 			<br>
 			<br>
 
-			<label> WEEK:
-				<input type="date"
-				/>
-				（From)
-			</label>
-
-			<label> WEEK:
-				<input type="date"
-				/>
-				(To)
+			<label> From) DATE AND TIME:
+				<input type="datetime-local"
+					   name="dtS"/>
 			</label>
 
 			<br>
 			<br>
 
-			<label> TIME:
-				<input type="time"/>
-				(hh:mm)
-				（From)
-			</label>
-
-			<label> TIME:
-				<input type="time"/>
-				(hh:mm)
-				(To)
+			<label> (To) DATE AND TIME:
+				<input type="datetime-local"
+					   name="dtE"/>
 			</label>
 
 			<br>
 			<br>
 
-			<form action="#">
-				  <input type="file" name="pic" accept="image/*">
-				  <br>
-				  (We recommend using high pixel pictures to prevent unclear of the picture.)
-			</form>
+			<!--<form action="#">-->
+			<!--<input type="file" name="pic" accept="image/*">-->
+			<!--<br>-->
+			<!--(We recommend using high pixel pictures to prevent unclear of the picture.)-->
+			<!--</form>-->
 
-			<br>
-			<br>
+			<!--<br>-->
+			<!--<br>-->
 
 			<label> DESCRIPTION: *
 				<input type="text" placeholder="This is an event about..."
-					   name="Description"/>
-					   (Enter some short description.)
+					   name="description"/>
+				(Enter some short description.)
 
 			</label>
 
@@ -87,40 +86,41 @@
 
 			<label> ORGANIZER NAME: *
 				<input type="text" placeholder="SocialClub Malaysia"
-					   name="OrganzerName"/>
-					   (Enter organizer name/company name)
+					   name="organizerName"/>
+				(Enter organizer name/company name)
 
 			</label>
 
 			<br>
 			<br>
 
-			<h1>2.Create Tickets</h1>
-			<h2>TICKET TYPE:</h2>
-			<select title="ticket_type">
-			  <option value="FreeTicket">FreeTicket</option>
-			  <option value="PaidTicket">PaidTicket</option>
-			  <option value="Donation">Donation</option>
-			</select>
+			<!--<h1>2.CREATE TICKETS</h1>-->
+			<!--<h2>Ticket Type:</h2>-->
+			<!--<select title="ticket_type">-->
+			<!--<option value="FreeTicket">FreeTicket</option>-->
+			<!--<option value="PaidTicket">PaidTicket</option>-->
+			<!--<option value="Donation">Donation</option>-->
+			<!--</select>-->
 
-			<br>
-			<br>
+			<!--<br>-->
+			<!--<br>-->
 
-			<h1>Additional Settings</h1>
-			<h2>Show Remaining Tickets:</h2>
+			<!--<h1>3. ADDITIONAL SETTINGS</h1>-->
+			<!--<h2>Show Remaining Tickets:</h2>-->
 
-            <label> Ticket numbers: *
-                <input type="text" placeholder="50/100/..."
-                       name="Ticket numbers"/>
-                (Set the quantity of tickets you want)
+			<!--<label> Ticket numbers: *-->
+			<!--<input type="text" placeholder="50/100/..."-->
+			<!--name="Ticket numbers"/>-->
+			<!--(Set the quantity of tickets you want)-->
 
-            </label>
+			<!--</label>-->
 
-				<br>
-				<br>
+			<!--<br>-->
+			<!--<br>-->
 
-                <input type="submit" value="Submit">
-        </form>
+			<input type="submit" value="update">
+		</div>
+	</form>
 
 	</body>
 
