--- a/others/jiale/createevent.html
+++ b/others/jiale/createevent.html
@@ -8,9 +8,12 @@
 		<title>Welcome to create event function.</title>
         <script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="js/connect.js"></script>
+		<link rel="stylesheet" href="css/crenupdevent.css">
 	</head>
 
 	<body>
+
+		<div id="page-wrap1">
         <h2 id="response"></h2>
 		<h1>Create An Event</h1>
 		<h2>1. EVENT DETAILS</h2>
@@ -111,7 +114,11 @@
 				<input type="submit" value="create">
             </div>
         </form>
+		</div>
 
+		<div id="bg">
+			<img src="resource/backg.jpg" alt="">
+		</div>
 	</body>
 
 </html>
