--- a/others/jiale/updateevent.html
+++ b/others/jiale/updateevent.html
@@ -7,9 +7,12 @@
 		<title>Welcome to update event function.</title>
 		<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="js/connect.js"></script>
+		<link rel="stylesheet" href="css/crenupdevent.css">
 	</head>
 
 	<body>
+
+    <div id="page-wrap1">
 	<h2 id="response"></h2>
 	<h1>Update An Event</h1>
 	<h2>1. EVENT DETAILS</h2>
@@ -121,6 +124,11 @@
 			<input type="submit" value="update">
 		</div>
 	</form>
+
+    </div>
+    <div id="bg">
+        <img src="resource/backg.jpg" alt="">
+    </div>
 
 	</body>
 
