-half done css for view event

--- a/others/alex/view_event.html
+++ b/others/alex/view_event.html
@@ -13,75 +13,7 @@
 	<body>
 
 		<div id="page-wrap">
-
-			<h3 class="descrp">DESCRIPTION</h3>
-
-			<!_Right Side of div_>
-			<nav>
-			<h3 class="arial">DATE AND TIME</h3>
-			<p>Wed, January 17,2018<br>6:30 PM – 7:30 PM Malaysia <br>Time Malaysia (Kuala Lumpur)<br>Time<br>
-				<button class="link">Add to Calendar</button>
-			</p>
-			<h3 class="arial">LOCATION</h3>
-			<p>iSpirit Asia, One South Street <br>Mall (B-5-12)<br>Jalan OS, Seri Kembangan<br>Selangor 43300<br>
-				<button class="link">View Map</button>
-			</p>
-			<button id="dlt" class="link"> DELETE</button>
-			</nav>
-
-			<div id="myModal" class="modal">
-
-			  <!-- Modal content -->
-			  <div class="modal-content">
-				<span class="close">&times;</span>
-				<p>Are you sure you wan to delete this event?</p>
-				<button>Yes</button>
-				<button>No</button>
-			  </div>
-
-			</div>
-
-			<script language="javascript" type="text/javascript" src="js/modalBox.js"></script>
-
-			<!_Left Side of div_>
-			<br><p><img class="opacity" alt="Event Pic" src="https://vignette.wikia.nocookie.net/camphalfbloodroleplay/images/0/05/Doge.png"></p><br>
-			<p class="margin">iSpirit Asia One South offers New Age Flow 60-minute Yoga Class conducted by YOGAVATAR certified Yoga Teacher. Welcome everyone regardless of fitness level and experience, modifications will be offered for a variety of levels. Please remember, it’s your practice, your best teacher resides within you. Always listen to your body and adjust your practice to fit your needs. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-
-			<!_Event Description_>
-			<h2 class="arial">EVENT DESCRIPTION</h2>
-			<p class="margin"><strong>New Age Flow:</strong> A dynamic yoga practice, focus on the breath while moving through a series of postures. The sequence of postures may be different from class to class, but always follow an intelligent progression that moves from basic to complex. This style of yoga builds heat, flexibility and strength, while maintaining focus on good alignment and sound structure. Postures may be held for longer periods of time, and will flow together to unite the body to the breath and mind. This class is suitable for everybody.</p>
-
-			<!_Schedule_>
-			<h2 class="arial">SCHEDULE</h2>
-			<p><strong>Every Tuesday 10:30am by Diana Lai</strong>
-			<br>contact number : +60123138138<br>
-			<strong>Every Wednesday 6:30pm by Jacqueline</strong>
-			<br>contact number : +60129887913<br>
-			</p>
-
-			<!_Location_>
-			<h2 class="arial">LOCATION</h2>
-			<ul>
-			  <li><strong>MYR30 per ticket</strong></li>
-			  <li>Buy 4 free 1 (Ticket valid for 1 month)</li>
-			  <li>Buy 10 free 5 (Ticket valid for 3 months)</li>
-			</ul>
-
-			<!_How to jion_>
-			<h2 class="arial">HOW TO JOIN</h2>
-			<ol>
-			  <li>Walk in buy ticket and pay cash to the instructor on duty.</li>
-			  <li>Fill in details on the ticket.</li>
-			  <li>Enjoy.</li>
-			</ol>
-
-			<!_Ticket price*_>
-			<h2 class="arial">TICKET PRICE</h2>
-			<ul>
-			  <li><strong>MYR30 per ticket</strong></li>
-			  <li>Buy 4 free 1 (Ticket valid for 1 month)</li>
-			  <li>Buy 10 free 5 (Ticket valid for 3 months)</li>
-			</ul>
+			<script language="javascript" type="text/javascript" src="js/viewEvent.js"></script>
 
 		</div>
 
