-updated ( to before From

--- a/others/jiale/updateevent.html
+++ b/others/jiale/updateevent.html
@@ -52,7 +52,7 @@
 			<br>
 			<br>
 
-			<label> From) DATE AND TIME:
+			<label> (From) DATE AND TIME:
 				<input type="datetime-local"
 					   name="dtS"/>
 			</label>
