--- a/others/jiale/createevent.html
+++ b/others/jiale/createevent.html
@@ -6,7 +6,7 @@
 
 		<meta charset="utf-8">
 		<title>Welcome to create event function.</title>
-        <script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../../script/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="js/connect.js"></script>
 		<link rel="stylesheet" href="css/crenupdevent.css">
 	</head>
