--- a/others/jiale/updateevent.html
+++ b/others/jiale/updateevent.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Welcome to update event function.</title>
-		<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="../../script/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="js/connect.js"></script>
 		<link rel="stylesheet" href="css/crenupdevent.css">
 	</head>
