--- a/others/linkdb/try (yinghua prototype)/user_login.html
+++ b/others/linkdb/try (yinghua prototype)/user_login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Log In</title>
-    <script type="text/javascript" src="../../../js/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../../../script/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/connect.js"></script>
 </head>
 <body>
