--- a/others/cgy-donetransfer/apply.html
+++ b/others/cgy-donetransfer/apply.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Apply for Ticket?</title>
-        <script type="text/javascript" src="../../script/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../../controller/jquery-3.2.1.min.js"></script>
         <!--<script type="text/javascript" src="js/createTicket.js"></script>-->
     </head>
     <body>
