--- a/others/cgy-donetransfer/browse.html
+++ b/others/cgy-donetransfer/browse.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Browse Event</title>
         <link rel="stylesheet" href="../../style/browse.css">
-        <script type="text/javascript" src="../../script/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../../controller/jquery-3.2.1.min.js"></script>
         <link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 900px)" />
     </head>
     <body>
