--- a/others/cgy-donetransfer/view_ticket.html
+++ b/others/cgy-donetransfer/view_ticket.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>View Ticket</title>
-        <script type="text/javascript" src="../../script/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../../controller/jquery-3.2.1.min.js"></script>
     </head>
     <body>
     <div class="browse_container">
-        <script language="javascript" type="text/javascript" src="../../script/getEventInfo.js"></script>
+        <script language="javascript" type="text/javascript" src="../../controller/getEventInfo.js"></script>
     </div>
     </body>
 </html>
