- update contact field added in update_event - view event for admin and user is now separated - re-organizing the folder

--- a/others/alex-donetransfer/view_event.html
+++ b/others/alex-donetransfer/view_event.html
@@ -6,7 +6,7 @@
 
 		<title>Demo Retrieval</title>
 		<link rel="stylesheet" href="css/view_event.css">
-		<script type="text/javascript" src="../../controller/jquery-3.2.1.min.js"></script>
+		<script type="text/javascript" src="../../controller/library/jquery-3.2.1.min.js"></script>
 		<link rel="stylesheet" href="css/responsive.css" media="screen and (max-width: 900px)" />
 	</head>
 
