--- a/others/linkdb/try (yinghua prototype)/admin_register.html
+++ b/others/linkdb/try (yinghua prototype)/admin_register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
-    <script type="text/javascript" src="../../../controller/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../../../controller/library/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="js/connect.js"></script>
 </head>
 <body>
